6 - Correção das imagens da tabela na pagina de compra

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -114,6 +114,11 @@ table {
     text-align: center;
 }
 
+table img {
+    background: none;
+    width: 50px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
