--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -56,7 +56,7 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 20px;
 }
 
 
@@ -109,6 +109,7 @@ div:last-child {
     text-align: center;
 }
 
+
 table {
     width: 60%;
     text-align: center;
@@ -130,6 +131,10 @@ td button {
 .container-do-search {
     margin-top: 20px;
     height: 100px;
+}
+
+.container-do-search img {
+    background: none;
 }
 
 
