--- a/modulo1/projeto-portfolio/css/home.css
+++ b/modulo1/projeto-portfolio/css/home.css
@@ -27,6 +27,10 @@ main #txt-apresentacao #btn-competencia button{
     border-radius: 8px;
 }
 
+main #txt-apresentacao #btn-competencia button:hover{
+    background: #7e2b0a;
+}
+
 
 main #txt-apresentacao h2{
     color: white;
@@ -46,6 +50,7 @@ main #txt-apresentacao a button{
 main #img-apresentacao img{
     width: 420px;
     display: inline;
+    margin-top: 14px;
 }
 
 #ensino {
@@ -70,4 +75,10 @@ main #img-apresentacao img{
 #ensino div img{
     width: 330px;
     padding: 12px 16px;
+    transition-duration: 0.9s;
+}
+
+#ensino div img:hover{
+    width: 350px;
+    transition-duration: 0.9s;
 }
