--- a/modulo1/projeto-portfolio/css/projetos.css
+++ b/modulo1/projeto-portfolio/css/projetos.css
@@ -8,12 +8,6 @@ footer {
     width: 100%;
 }
 
-h1 {
-    text-align: center;
-    color: white;
-    text-transform: uppercase;
-}
-
 #projetos {
     margin: 40px 0;
     text-align: center;
@@ -31,10 +25,13 @@ h1 {
     padding: 16px;
     align-items: center;
     border-radius: 8px;
+    transition-duration: 0.5s;
 }
 
 #projetos a:hover{
-    width: 30%;
+    color: white;
+    transform: scale(1.3);
+    transition-duration: 0.9s;
 }
 
 .projeto img {
