--- a/modulo3/labex/src/index.css
+++ b/modulo3/labex/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #4f4f4f #050505;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #050505;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #4f4f4f;
+  border-radius: 15px;
+  border: 3px solid #000000;
+}
